--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -237,7 +238,7 @@ main #alta #alta-opcoes {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    width: 85%;
     margin: 0 auto .6rem ;
 }
 main #alta #alta-opcoes h2 {
@@ -279,7 +280,7 @@ main #alta #box-cards {
     align-items: center;
     flex-direction: row;
     overflow-x: scroll;
-    width: 82%;
+    width: 85%;
     margin: 1rem auto;
     padding: 5px;
     border: 1px solid wheat;
@@ -342,16 +343,19 @@ main #alta #box-cards .card .card-img-dez {
     background-image:url('../img/cards/filme10.jpg');
 }
 
+
 #motivos-assins {
     display: flex;
     flex-direction: column;
-    width: 82%;
+    width: 85%;
     margin: auto;
 }
-#motivos-assins h2 {
+
+#motivos-assins h2, #box-pergunts h2 {
     font-size: 2rem;
     margin-bottom: 2rem;
 }
+
 #motivos-assins #cards-motiv {
     display: flex;
     flex-direction: row;
@@ -370,3 +374,86 @@ main #alta #box-cards .card .card-img-dez {
     font-size: 1.2rem;
 }
 
+
+#box-pergunts {
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    margin: 2.5rem auto 0;
+}
+#box-pergunts h2 {
+    margin-bottom: 1rem;
+}
+#box-pergunts #cont-pergunts {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 2rem;
+}
+#box-pergunts #cont-pergunts .box-card {
+    width: 100%;
+    margin-bottom: .5rem;
+}
+#box-pergunts #cont-pergunts .card-pergunta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    border-radius: 1rem;
+    border: none;
+    background:#8080804d;
+    padding: 0 2em;
+    margin-bottom: .6rem;
+    transition: .5s;
+}
+#box-pergunts #cont-pergunts .card-pergunta:hover {
+    cursor: pointer;
+    background: #808080a8;
+    box-shadow: 0 0 4px 1px #ffffff0e;
+}
+
+#box-pergunts #cont-pergunts .card-pergunta #title, #icon {
+    font-size: 1rem;
+    color: #fff;
+    letter-spacing: 1px;
+}
+#box-pergunts #cont-pergunts .card-pergunta #icon i{
+    font-size: 1.5rem;
+    margin-right: 10px;
+}
+#box-pergunts #cont-pergunts .card-resposta {
+    border-radius: 1rem;
+    border: none;
+    background:#8080804d;
+    padding: 1.5rem 2em;
+    margin-bottom: .4rem;
+}
+
+#vamos {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+#vamos button {
+    width: 140px;
+    height: 45px;
+    margin: 1rem ;
+    border: none;
+    border-radius: 1rem;
+    background-color: red;
+    color: #fff; 
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    opacity: .8;
+    transition: .5s;
+}
+#vamos button:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+#vamos p {
+    font-size: .8rem;
+    letter-spacing: 1px;
+}
